// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Utilities: JavascriptDocs CloseDocs renders 1`] = `
<Fragment>
  <JavascriptDocElement
    code={
      <Tag
        code={true}
        params={
          Array [
            "<test-id>",
          ]
        }
        text="dg.test.close(<test-id>)"
        type="secondary"
      />
    }
    description={
      <React.Fragment>
        Closes the given 
        test
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`Utilities: JavascriptDocs OpenDocs renders 1`] = `
<Fragment>
  <JavascriptDocElement
    code={
      <Tag
        code={true}
        params={
          Array [
            "<test-id>",
          ]
        }
        text="dg.test.open(<test-id>)"
        type="secondary"
      />
    }
    description={
      <React.Fragment>
        Opens the given 
        test
      </React.Fragment>
    }
  />
</Fragment>
`;

exports[`Utilities: JavascriptDocs renders init and close methods 1`] = `
<Fragment>
  <ul
    className="item-list"
  >
    <JavascriptDocElement
      code={
        <Tag
          code={true}
          text="dg.test.init()"
          type="secondary"
        />
      }
      description={
        <React.Fragment>
          <ForwardRef(Link)
            to="/get-started/for-developers"
          >
            Initializes
          </ForwardRef(Link)>
           
          test
        </React.Fragment>
      }
    />
    <CloseDocs
      componentName="test"
    />
  </ul>
</Fragment>
`;

exports[`Utilities: JavascriptDocs renders init and open methods 1`] = `
<Fragment>
  <ul
    className="item-list"
  >
    <JavascriptDocElement
      code={
        <Tag
          code={true}
          text="dg.test.init()"
          type="secondary"
        />
      }
      description={
        <React.Fragment>
          <ForwardRef(Link)
            to="/get-started/for-developers"
          >
            Initializes
          </ForwardRef(Link)>
           
          test
        </React.Fragment>
      }
    />
    <OpenDocs
      componentName="test"
    />
  </ul>
</Fragment>
`;

exports[`Utilities: JavascriptDocs renders init, open and close methods 1`] = `
<Fragment>
  <ul
    className="item-list"
  >
    <JavascriptDocElement
      code={
        <Tag
          code={true}
          text="dg.test.init()"
          type="secondary"
        />
      }
      description={
        <React.Fragment>
          <ForwardRef(Link)
            to="/get-started/for-developers"
          >
            Initializes
          </ForwardRef(Link)>
           
          test
        </React.Fragment>
      }
    />
    <OpenDocs
      componentName="test"
    />
    <CloseDocs
      componentName="test"
    />
  </ul>
</Fragment>
`;

exports[`Utilities: JavascriptDocs renders only init method 1`] = `
<Fragment>
  <ul
    className="item-list"
  >
    <JavascriptDocElement
      code={
        <Tag
          code={true}
          text="dg.test.init()"
          type="secondary"
        />
      }
      description={
        <React.Fragment>
          <ForwardRef(Link)
            to="/get-started/for-developers"
          >
            Initializes
          </ForwardRef(Link)>
           
          test
        </React.Fragment>
      }
    />
  </ul>
</Fragment>
`;
